# central-auth

./: .gitignore  Dockerfile  README.md  development.db  docker-compose.yml  main.py  mkdocs.yml  plan.md  pyproject.toml
app/: config.py  main.py
app/auth/: __init__.py  router.py
app/core/: concurrency.py  config.py  database.py
app/db/: models.py  session.py
app/exceptions/: __init__.py  users.py
app/models/: apikeys.py  services.py  user.py
app/router/: __init__.py  auth.py
app/schemas/: login.py
app/security/: password.py  utils.py
app/services/: auth.py  users.py
docs/: index.md
docs/api/: overview.md
docs/api/endpoints/: health.md  login.md  root.md
docs/errors/: custom-codes.md  http-errors.md
docs/exceptions/: overview.md
jetbase/: env.py
jetbase/migrations/: V20260206.151914__auto_generated.sql  V20260206.152600__auto_generated.sql
migrations/primary/: primary__0001_auto_generated.sql  primary__0002_auto_generated.sql
