[project]
name = "eclipse-labs-auth"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "dbwarden>=0.3.6",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
