[project]
name = "eclipse-labs-auth"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dbwarden>=0.3.6",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pwdlib>=0.3.0",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
